--- a/index.html
+++ b/index.html
@@ -121,17 +121,6 @@
                                                 <a class="dropdown-item" href="#">Home appraisers</a>
                                             </div>
                                         </li>
-                                        <!-- <li class="nav-item dropdown">
-						        <a class="nav-link dropdown-toggle" href="#" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
-						        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						          <a class="dropdown-item" href="#">Concrete</a>
-						          <a class="dropdown-item" href="#">Remodelling </a>
-						          <a class="dropdown-item" href="#">Landscaping </a>
-						          <a class="dropdown-item" href="#">Plumbing</a>
-						          <a class="dropdown-item" href="#">Handy man</a>
-						          <a class="dropdown-item" href="#">Handy woman</a>
-						        </div>
-						      </li> -->
                                         <button type="button" class="btn btn-primary button-login">
                                             <span><a href="#">Login</a></span>
                                             <span class="space-line">/</span>
@@ -196,10 +185,10 @@
                                             </div>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="javascript:void();" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+                                            <a class="nav-link dropdown-toggle dropdown-toggle-cs" href="#" >
                                                 Resourses
                                             </a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                            <ul class="dropdown-menu">
                                                 <li>
                                                     <a class="dropdown-item" href="#">Concrete</a>
                                                 </li>
@@ -219,8 +208,8 @@
                                                     <a class="dropdown-item" href="#">Handy woman</a>
                                                 </li>
                                                 <li>
-                                                    <a class="dropdown-item" href="#">
-                                                        Projects &raquo;
+                                                    <a class="dropdown-item dropdown-toggle dropdown-toggle-cs" href="#">
+                                                        Projects
                                                     </a>
                                                     <ul class="dropdown-menu dropdown-submenu">
                                                         <li>
@@ -395,6 +384,6 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
-        
+        <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
