--- a/Appraisal.html
+++ b/Appraisal.html
@@ -185,10 +185,10 @@
                                             </div>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="javascript:void();" id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+                                            <a class="nav-link dropdown-toggle dropdown-toggle-cs" href="#" >
                                                 Resourses
                                             </a>
-                                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                            <ul class="dropdown-menu">
                                                 <li>
                                                     <a class="dropdown-item" href="#">Concrete</a>
                                                 </li>
@@ -208,8 +208,8 @@
                                                     <a class="dropdown-item" href="#">Handy woman</a>
                                                 </li>
                                                 <li>
-                                                    <a class="dropdown-item" href="#">
-                                                        Projects &raquo;
+                                                    <a class="dropdown-item dropdown-toggle dropdown-toggle-cs" href="#">
+                                                        Projects
                                                     </a>
                                                     <ul class="dropdown-menu dropdown-submenu">
                                                         <li>
@@ -297,6 +297,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/js/main.js"></script>
 
         <script type="text/javascript">
             //  this is js code use at the video page only
