--- a/Inspection.html
+++ b/Inspection.html
@@ -185,7 +185,7 @@
                                             </div>
                                         </li>
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle dropdown-toggle-cs" href="#"id="navbarDropdownMenuLink" role="button" data-mdb-toggle="dropdown" aria-expanded="false" >
+                                            <a class="nav-link dropdown-toggle dropdown-toggle-cs" href="#" >
                                                 Resourses
                                             </a>
                                             <ul class="dropdown-menu">
@@ -208,7 +208,7 @@
                                                     <a class="dropdown-item" href="#">Handy woman</a>
                                                 </li>
                                                 <li>
-                                                    <a class="dropdown-item dropdown-toggle-cs" href="#" id="project_drowdown">
+                                                    <a class="dropdown-item dropdown-toggle dropdown-toggle-cs" href="#">
                                                         Projects
                                                     </a>
                                                     <ul class="dropdown-menu dropdown-submenu">
@@ -410,6 +410,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="assets/js/main.js"></script>
 
     </body>
 </html>
