--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="banner-video">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-12 col-md-2 padding-right">
+                        <div class="col-12 col-md-12 col-lg-2 padding-right">
                             <div class="advitisment-outer">
                                 <div class="profileImage">
                                 		<img src="assets/images/advertisment/profile.png" class="img-fluid" alt="bannerLeft" />
@@ -297,7 +297,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-8">
+                        <div class="col-12 col-md-12 col-lg-8">
                             <div class="video-outer">
                                 <video class="video-inner" autoplay muted plays-inline loop>
                                     <source src="assets/video/video.mp4" type="video/mp4" />
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-2 padding-left">
+                        <div class="col-12 col-md-12 col-lg-2 padding-left">
                             <div class="advitisment-outer">
                                 <div class="profileImage">
                                 		<img src="assets/images/advertisment/profile.png" class="img-fluid" alt="bannerLeft" />
