--- a/Inspection.html
+++ b/Inspection.html
@@ -211,7 +211,7 @@
                                                     <a class="dropdown-item dropdown-toggle dropdown-toggle-cs" href="#">
                                                         Projects
                                                     </a>
-                                                    <ul class="dropdown-menu dropdown-submenu">
+                                                    <ul class="dropdown-menu">
                                                         <li>
                                                             <a class="dropdown-item" href="#">Concrete</a>
                                                         </li>
